--- a/Neo/FrmPrm.resx
+++ b/Neo/FrmPrm.resx
@@ -503,6 +503,20 @@
         JTTyf4U2CpZ8tIFNdPwXLi6/AaZlQcMYxheOAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="mnuMtoCaja.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAg1JREFUOE+d
+        0m1PUmEYB/D7i/UVepktAQ+DbIWbLJsrLKgAmSU+xYySgogts5nOJedwADk8JE5t0ZvQtTVYOkjQJbce
+        tzb6d+4DkjXexLX9dt3X/fDfeXFIUlrVKtAhjgWg01qJZ0DisXSNDRcdgf/CKiqmakSMJCgbtPYgeqMV
+        XAsXYRJ2YAorWP/LN+jFinqXVYRfoUQIR1sBg+kfsMRKGJLKsP7jjmJIKmFAOmwF8MsiJUtLfCtg5IMM
+        1/sq7JkqbiX3cCOxh0EF6xZltqcrcGwctwIWF3lKFubfUfxsbJqzMgz8dxgjZRiFMgxnsNnIl8El5EaA
+        fIi52QVKZkNvaHW3iAu3vRjYrKNf2sf11EF7yX2YN36pd6s7BQR8Lyl58TxEi9t5nDfZ4PwCWNYprJvH
+        7Smfb9uCerewlYd32keJ74mf5tbX1E1XAbDlZNz7dNJe7gT2r42Aj2urmHR7KPFMPa6lMmloNVroNTpw
+        Sue6NaqeptOZ0zA66DQcJCkJl/NhjUyMeeqReALLggghGlfxkSjCYhQ8w9YK1k/P2czYrM46MfX2n1Og
+        Q32kXVlv3oUoxPAq9Br+Z0EEAyH0XTGjedy+OI1hZnrSK9+3OY9KuyX1Rzlb+c/bcNiGj8ZHp+Turp6Z
+        5rM/dVl/NTs/9xaM76kfY6OP8MDlVg07RjDunmi51MVlG68I+Q2x+8fhrl18DAAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="mnuMtoMoneda.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAA1tJREFUOE9l
